Fixed navigation z-index

--- a/portfolio/app/static/app/css/nav.css
+++ b/portfolio/app/static/app/css/nav.css
@@ -1,4 +1,6 @@
 .main-nav {
+    z-index: 2;
+
     background-color: var(--nav-container-bg-color);
 
     display: flex;
